test/sema/traits/trait_list_non_conforming_type_arg_fn.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait Base {}

trait A<T <: Base> {}

// CHECK: [[# @LINE + 1]]:15: error: cannot satisfy constraint 'number : Base'
fn foo<T <: A<number>>() {}

fn main() {}
